--- a/master.css
+++ b/master.css
@@ -77,6 +77,7 @@ button {
       border: 1px solid #c89253;
       text-transform: uppercase;
       letter-spacing: 4px;
+      cursor: pointer;
 }
 
 button:focus {
@@ -89,11 +90,11 @@ button:hover {
       color: #110b07;
 }
 
-.wines {
+.site {
       position: absolute;
       width: 100%;
       height: 100vh;
-      background: #130c08;
+      background: #c5c0bd;
       z-index: 1;
       opacity: 0;
 }
@@ -129,6 +130,7 @@ button:hover {
       display: block;
       width: 80%;
       height: auto;
+      max-height: 705px;
       z-index: 2;
 }
 
