--- a/man_forms/style.css
+++ b/man_forms/style.css
@@ -187,16 +187,19 @@ body{
 @media (max-width: 1100px){
     .form-input,
     .range{
-        width: 302px;
+        width: 320px;
     }
 }
 
 @media (max-width: 400px){
     .form-input,
     .range{
-        width: 320px;
+        width: 302px;
     }
     .range-width{
         width: 200px;
+    }
+    .flex-wrapper{
+        justify-content: center;
     }
 }
