--- a/man_forms/style.css
+++ b/man_forms/style.css
@@ -15,7 +15,8 @@
 *{
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
 }
 
 body{
@@ -41,9 +42,14 @@ body{
 }
 
 .flex-wrapper{
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
 }
 
 .form-label{
@@ -63,6 +69,30 @@ body{
     padding-top: 5px;
     padding-left: 15px;
     border-radius: 4px;
+}
+
+.form-input::-webkit-input-placeholder{
+    font-family: "maneurope-light";
+    font-size: 15px;
+    color: #c3c6ca;
+}
+
+.form-input::-moz-placeholder{
+    font-family: "maneurope-light";
+    font-size: 15px;
+    color: #c3c6ca;
+}
+
+.form-input:-ms-input-placeholder{
+    font-family: "maneurope-light";
+    font-size: 15px;
+    color: #c3c6ca;
+}
+
+.form-input::-ms-input-placeholder{
+    font-family: "maneurope-light";
+    font-size: 15px;
+    color: #c3c6ca;
 }
 
 .form-input::placeholder{
@@ -147,6 +177,8 @@ body{
     background:#303c49;
     border-radius:18px;
     cursor:pointer;
+    -webkit-transition:.1s;
+    -o-transition:.1s;
     transition:.1s;
 }
 
@@ -200,6 +232,8 @@ body{
         width: 200px;
     }
     .flex-wrapper{
-        justify-content: center;
+        -webkit-box-pack: center;
+            -ms-flex-pack: center;
+                justify-content: center;
     }
 }
