--- a/it_sint/style.css
+++ b/it_sint/style.css
@@ -5,6 +5,20 @@
     font-style: normal;
    }
 
+@font-face {
+    font-family: "exo-20-bold";
+    src: url("fonts/exo-20-bold.ttf") format("truetype");
+    font-weight: normal;
+    font-style: normal;
+   }
+
+@font-face {
+    font-family: "exo-light";
+    src: url("fonts/exo-light.otf") format("opentype");
+    font-weight: normal;
+    font-style: normal;
+   }
+
 *{
     margin: 0;
     padding: 0;
@@ -37,11 +51,12 @@ html{
 .production-item{
     width: 384px;
     transition: 0.5s;   
+    position: relative;
 }
 
 .production-item:hover{
     transition: 0.5s;
-    box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2); 
+    box-shadow: 0px 6px 9px 0px rgba(0, 0, 0, 0.1);
 }
 
 .item-long{
@@ -82,21 +97,223 @@ h3{
 }
 
 h4{
+    font-family: "exo2";
     color: #002476;
+    font-size: 30px;
+    margin: 15px 0 15px 0;
 }
 
-h5{
-    font-family: "exo2";
+.item-header{
+    font-family: "exo-20-bold";
     font-weight: bold;
     font-size: 14px;
     color: #002476;
     text-transform: uppercase;
     margin: 25px 0 23px 0;
+    padding-left: 25px;
 }
 
-p{
+.item-text{
     font-family: "exo2";
     font-size: 16px;
     color: #575a61; 
     line-height: 22px;
+    margin-bottom: 40px;
+    padding-left: 25px;
 }
+
+.light{
+    font-family: "exo-light";
+    margin-bottom: 30px;
+}
+
+.item-ancor{
+    text-decoration: none;
+}
+
+.go-icon{
+    position: absolute;
+    opacity: 0;
+    top: 0;
+    right: 2px;
+    width: 60px;
+    height: 60px;
+    background: #fb0e52;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
+    -webkit-transition: all 0.3s;
+    -o-transition: all 0.3s;
+    transition: all 0.3s;
+}
+
+.go-long{
+    right: 0;
+}
+
+.production-item:hover .go-icon{
+    opacity: 1;
+}
+
+.icon-go{
+    display: block;
+    width: 23px;
+    min-width: 23px;
+    max-width: 23px;
+    height: 20px;
+    background: url(img/go.png) no-repeat;
+    background-position: center;
+}
+
+/* forms */
+
+.poly-style {
+    position: relative;
+}
+
+.poly-style input {
+    width: 434px;    
+    height: 50px;
+    border: 2px solid #e8e8e8;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+    -webkit-border-radius: 2px;
+    border-radius: 2px;
+    outline: none;
+    padding: 0px 18px;
+    color: #002476;
+    font-weight: 500;
+    margin: 0 20px 20px 0;
+}
+
+.poly-style input + label {
+    display: inline-block;
+    position: absolute;
+    margin: auto;
+    top: 0;
+    bottom: 16px;
+    cursor: text;
+    left: 18px;
+    width: 100%;
+    height: 20px;
+    color: #959595;
+    white-space: nowrap;
+    overflow: hidden;
+    padding-right: 40px;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+    -o-text-overflow: ellipsis;
+    text-overflow: ellipsis;
+    font-family: "exo-light";
+}
+
+.poly-style span {
+    color: #fb0e52;
+}
+
+.poly-style select {
+    width: 434px;
+    height: 50px;
+    border: 2px solid #e8e8e8;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+    -webkit-border-radius: 2px;
+    border-radius: 2px;
+    outline: none;
+    padding: 0px 30px 0px 18px;
+    font-weight: 500;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    background-color: #ffffff;
+    background-image: url(img/down-mini_2.png);
+    background-repeat: no-repeat;
+    background-position: right 10px center;
+}
+
+.color-default {
+    color: #959595;
+}
+
+.color-blue {
+    color: #002476;
+}
+
+/* Base for label styling */
+[type="checkbox"]:not(:checked),
+[type="checkbox"]:checked {
+  position: absolute;
+  left: -9999px;
+}
+[type="checkbox"]:not(:checked) + label,
+[type="checkbox"]:checked + label {
+  position: relative;
+  padding-left: 25px;
+  cursor: pointer;
+}
+
+/* checkbox aspect */
+[type="checkbox"]:not(:checked) + label:before,
+[type="checkbox"]:checked + label:before {
+  content: '';
+  position: absolute;
+  left:0; top: 2px;
+  width: 17px; height: 17px;
+  border: 1px solid #aaa;
+  background: #f8f8f8;
+  border-radius: 3px;
+  box-shadow: inset 0 1px 3px rgba(0,0,0,.3)
+}
+/* checked mark aspect */
+[type="checkbox"]:not(:checked) + label:after,
+[type="checkbox"]:checked + label:after {
+  content: '✔';
+  position: absolute;
+  top: 0; left: 4px;
+  font-size: 14px;
+  color: blue;
+  transition: all .2s;
+}
+/* checked mark aspect changes */
+[type="checkbox"]:not(:checked) + label:after {
+  opacity: 0;
+  transform: scale(0);
+}
+[type="checkbox"]:checked + label:after {
+  opacity: 1;
+  transform: scale(1);
+}
+/* disabled checkbox */
+[type="checkbox"]:disabled:not(:checked) + label:before,
+[type="checkbox"]:disabled:checked + label:before {
+  box-shadow: none;
+  border-color: #bbb;
+  background-color: #ddd;
+}
+[type="checkbox"]:disabled:checked + label:after {
+  color: #999;
+}
+[type="checkbox"]:disabled + label {
+  color: #aaa;
+}
+/* accessibility */
+[type="checkbox"]:checked:focus + label:before,
+[type="checkbox"]:not(:checked):focus + label:before {
+  border: 1px dotted blue;
+}
+
+/* hover style just for information */
+label:hover:before {
+  border: 1px solid #4778d9!important;
+}
+
+
